--- a/Weitianshi/pages/search/search1/search1.wxss
+++ b/Weitianshi/pages/search/search1/search1.wxss
@@ -59,7 +59,8 @@
   position: fixed;
   bottom: 0;
   background: #40587a;
-  width: 376px;
+  /* width: 376px; */
+  width: 100%;
   height: 44px;
   font-size: 28rpx;
   color: #fff;
