--- a/Weitianshi/pages/match/match/investDemand/investDemand.wxml
+++ b/Weitianshi/pages/match/match/investDemand/investDemand.wxml
@@ -4,6 +4,7 @@
     <view class="text">投资领域*</view>
     <navigator url="/pages/form/industry/industry?current=1" id="domain">
       <view class="slect flex">
+      <view  wx:if="{{domainValue.length == 0}}">选择领域</view>
         <view class="{{domainValue =='选择领域' ? '':'checkOn'}}">{{domainValue}}</view>
         <image class="downArrow" src="/img/downArrow.png"></image>
       </view>
@@ -16,6 +17,7 @@
     <view class="text">投资阶段*</view>
     <navigator url="/pages/form/stage/stage" id="payStage">
       <view class="slect flex">
+      <view  wx:if="{{payStage.length == 0}}">选择阶段</view>
         <view class="{{payStage =='选择阶段' ? '':'checkOn'}}">{{payStage}}</view>
         <image class="downArrow" src="/img/downArrow.png"></image>
       </view>
@@ -26,6 +28,7 @@
     <view class="text">投资金额*</view>
     <navigator url="/pages/form/scale/scale" id="payMoney">
       <view class="slect flex">
+      <view wx:if="{{payMoney.length == 0}}">选择金额</view>
         <view class="{{payMoney =='选择金额' ? '':'checkOn'}}">{{payMoney}}</view>
         <image class="downArrow" src="/img/downArrow.png"></image>
       </view>
@@ -36,7 +39,8 @@
     <view class="text">投资地区*</view>
     <navigator url="/pages/form/area2/area2" id="payArea">
       <view class="slect flex">
-        <view class="{{payArea =='选择城市' ? '':'checkOn'}}">{{payArea}}</view>
+      <view wx:if="{{payArea.length == 0}}">选择城市</view>
+        <view class="{{payArea == '选择城市' ? '':'checkOn'}}">{{payArea}}</view>
         <image class="downArrow" src="/img/downArrow.png"></image>
       </view>
     </navigator>
