--- a/Weitianshi/pages/form/industry/industry.wxss
+++ b/Weitianshi/pages/form/industry/industry.wxss
@@ -37,8 +37,8 @@ page {
 }
 
 .tips view {
-  border: 1px solid #999;
-  border-radius: 8rpx;
+  border: 1px solid #f0f0f0;
+  border-radius: 4rpx;
 }
 
 .offer view:first-child {
