--- a/Weitianshi/pages/match/match/match/match.wxss
+++ b/Weitianshi/pages/match/match/match/match.wxss
@@ -477,6 +477,7 @@ page {
 .projectDetailLine {
   padding: 0 16rpx;
   border-right: 1rpx solid #999;
+  color:#999;
 }
 
 .projectDetailLight {
@@ -775,6 +776,7 @@ page {
   position: absolute;
   right: 32rpx;
   top: 32rpx;
+  color:#40587a;
 }
 
 .redPoint {
