--- a/Weitianshi/pages/message/beAddedContacts/beAddedContacts.wxml
+++ b/Weitianshi/pages/message/beAddedContacts/beAddedContacts.wxml
@@ -13,7 +13,8 @@
 
 <!--资本对接-->
 <view class="s_frame" hidden="{{contacts=='' || !contacts}}">
-  <scroll-view scroll-y="true" bindscrolltolower="loadMore" scroll-top="{{scroll}}">
+<!-- bindscrolltolower="loadMore" -->
+  <scroll-view scroll-y="true"  scroll-top="{{scroll}}">
     <view class="contacts">
       <block wx:for="{{contacts}}" wx:key="{{item.user_id}}">
         <view class="card" data-id="{{item.user_id}}" bindtap="userDetail">
