--- a/Weitianshi/pages/contactsActivty/joinWarband/joinWarband.wxss
+++ b/Weitianshi/pages/contactsActivty/joinWarband/joinWarband.wxss
@@ -1,1 +1,44 @@
-/* pages/contactsActivty/joinWarband/joinWarband.wxss */
+#joinWarband{
+    background:#f3f4f8;
+}
+.joinedWarband{
+    padding-top: 88rpx;
+}
+.text{
+    
+}
+.warband{
+    padding:32rpx;
+    justify-content: space-between;
+    background: white;
+    margin-bottom: 32rpx;
+}
+.warband .logo{
+    width: 120rpx;
+    height: 120rpx;
+}
+.warband .logo image{
+    width: 100%;
+    height: 100%;
+    background: yellow;
+}
+.warband .info{
+    text-align: left;
+    width: 65%;
+}
+.warband .info .companyName{
+    font-size:32rpx;
+    color: #333;
+    margin-bottom: 24rpx;
+}
+.warband .info .representative{
+    font-size: 24rpx;
+    color: #666;
+}
+.warband .checkbox{
+    margin-top: 34rpx;
+}
+.warband .checkbox image{
+    width: 48rpx;
+    height: 48rpx;
+}
