--- a/Weitianshi/pages/contactsActivty/joinWarband/joinWarband.wxss
+++ b/Weitianshi/pages/contactsActivty/joinWarband/joinWarband.wxss
@@ -1,11 +1,19 @@
 #joinWarband{
     background:#f3f4f8;
 }
-.joinedWarband{
+.paddingTop{
     padding-top: 88rpx;
 }
 .text{
+    padding: 24rpx 18rpx;
     
+}
+.text .blueLine{
+    background: #40587a;
+    width: 4rpx;
+    height: 22rpx;
+    display: inline-block;
+    margin-right: 12rpx;
 }
 .warband{
     padding:32rpx;
@@ -20,7 +28,6 @@
 .warband .logo image{
     width: 100%;
     height: 100%;
-    background: yellow;
 }
 .warband .info{
     text-align: left;
