--- a/Weitianshi/pages/myProject/pushTo/pushTo.wxss
+++ b/Weitianshi/pages/myProject/pushTo/pushTo.wxss
@@ -126,6 +126,12 @@
   text-align: center;
   color: #fff;
 }
+/* .pushProjectAfter {
+  font-size: 30rpx;
+  line-height: 30rpx;
+  text-align: center;
+  color: #fff;
+} */
 
 /* 错误提示*/
 
