--- a/Weitianshi/pages/my/cardEdit/cardEdit.wxml
+++ b/Weitianshi/pages/my/cardEdit/cardEdit.wxml
@@ -17,13 +17,17 @@
     <view class="text">公司*</view>
     <input class="" id="company" value="{{user_info.user_company_name}}" bindblur="companyEdit" />
   </view>
+    <view class="card">
+    <view class="text">品牌</view>
+    <input class="" id="companybrand" value="{{user_info.user_brand}}" bindblur="brandEdit"  placeholder="品牌(选填)"/>
+  </view>
   <view class="card">
     <view class="text">职位*</view>
     <input class="" id="career" value="{{user_info.user_company_career}}" bindblur="careerEdit" />
   </view>
   <view class="card">
     <view class="text">邮箱</view>
-    <input class="" id="eMail" value="{{user_info.user_email}}" bindblur="eMailEdit" />
+    <input class="" id="eMail" value="{{user_info.user_email}}" bindblur="eMailEdit"  placeholder="邮箱(选填)"/>
   </view>
   <view class="card">
     <view class="text">个人描述</view>
