--- a/Weitianshi/pages/contactsActivty/topPlayer/topPlayer.wxss
+++ b/Weitianshi/pages/contactsActivty/topPlayer/topPlayer.wxss
@@ -1,1 +1,150 @@
 /* pages/contactsActivty/topPlayer/topPlayer.wxss */
+
+.explain {
+  background: rgba(255, 241, 232, 0.80);
+  width: 375px;
+  height: 80rpx;
+  font-size: 28rpx;
+  color: #666;
+  letter-spacing: 0;
+  line-height: 80rpx;
+  text-align: left;
+}
+
+page {
+  background: #f3f4f8;
+}
+
+.swiper-tab {
+  width: 100%;
+  text-align: center;
+  line-height: 80rpx;
+  background: #fff;
+}
+
+.swiper-tab-list {
+  display: inline-block;
+  width: 50%;
+  font-size: 26rpx;
+  color: #999;
+  line-height: 62rpx;
+  text-align: center;
+  border: none;
+}
+
+.on {
+  color: #40587a;
+  text-align: center;
+  font-size: 26rpx;
+  line-height: 80rpx;
+  border-bottom: 4rpx solid #40587a;
+}
+
+.littleBox {
+  background: #fff;
+  border-radius: 8rpx;
+  width: 208rpx;
+  height: 104rpx;
+  margin-top: 32rpx;
+  margin-left: 32rpx;
+}
+
+.number {
+  font-size: 28rpx;
+  color: #333;
+  letter-spacing: 0;
+  line-height: 28rpx;
+  text-align: left;
+  margin-top: 20rpx;
+  margin-bottom: 16rpx;
+}
+
+.ranking {
+  font-size: 20rpx;
+  color: #666;
+  letter-spacing: 0;
+  line-height: 20rpx;
+  text-align: left;
+  margin-bottom: 20rpx;
+}
+
+/*用户信息  */
+
+.infoLeft {
+  height: 122rpx;
+  width: 122rpx;
+  background: yellow;
+  border-radius: 50%;
+  margin-right: 22rpx;
+}
+
+.userName {
+  font-size: 32rpx;
+  color: #333;
+  line-height: 32rpx;
+  text-align: left;
+  margin-bottom: 24rpx;
+}
+
+.userCompany, .userPosition {
+  font-size: 24rpx;
+  color: #666;
+  line-height: 24rpx;
+  text-align: left;
+  margin-bottom: 16rpx;
+}
+
+.infoBox {
+  height: 122rpx;
+  background: #fff;
+  padding: 32rpx;
+  position: relative;
+}
+
+.refuse {
+  opacity: 0.8;
+  font-size: 20rpx;
+  color: #ccc;
+  letter-spacing: 0;
+  line-height: 48rpx;
+  text-align: left;
+  border: 1rpx solid #999;
+  border-radius: 100rpx;
+  width: 118rpx;
+  height: 48rpx;
+}
+
+.addPersonBtn {
+  background: #40587a;
+  font-size: 20rpx;
+  border-radius: 200rpx;
+  color: #fff;
+  padding: 14rpx 0;
+  line-height: 20rpx;
+  width: 120rpx;
+  text-align: center;
+  margin-bottom:40rpx;
+}
+
+.addNetwork {
+  position: absolute;
+  right: 32rpx;
+  top: 68rpx;
+}
+
+.personNum {
+  color: #fc703e;
+}
+
+.firstFriend,.secondFriend{
+  color: #999;
+}
+
+.totalNum {
+  font-size: 24rpx;
+  margin-top:34rpx;
+  margin-bottom:16rpx;
+}
+.rightBox{
+  text-align: right;
+}
