--- a/Weitianshi/pages/contactsActivty/topPlayer/topPlayer.wxss
+++ b/Weitianshi/pages/contactsActivty/topPlayer/topPlayer.wxss
@@ -1,14 +1,15 @@
 /* pages/contactsActivty/topPlayer/topPlayer.wxss */
 
-.explain {
+#explain {
   background: rgba(255, 241, 232, 0.80);
-  width: 375px;
+  width: 95.7%;
   height: 80rpx;
   font-size: 28rpx;
   color: #666;
   letter-spacing: 0;
   line-height: 80rpx;
   text-align: left;
+  padding-left:32rpx;
 }
 
 page {
@@ -123,7 +124,7 @@ page {
   line-height: 20rpx;
   width: 120rpx;
   text-align: center;
-  margin-bottom:40rpx;
+  margin-bottom: 40rpx;
 }
 
 .addNetwork {
@@ -136,15 +137,39 @@ page {
   color: #fc703e;
 }
 
-.firstFriend,.secondFriend{
+.firstFriend, .secondFriend {
   color: #999;
 }
 
 .totalNum {
   font-size: 24rpx;
-  margin-top:34rpx;
-  margin-bottom:16rpx;
+  margin: 34rpx 32rpx 16rpx 32rpx;
+  justify-content: space-between;
 }
-.rightBox{
+
+.rightBox {
   text-align: right;
+}
+
+/*战队样式  */
+
+.brandName {
+  font-size: 32rpx;
+  color: #333;
+  line-height: 32rpx;
+  text-align: left;
+  margin-bottom:24rpx;
+}
+
+.representativeName {
+  font-size: 24rpx;
+  color: #666;
+  line-height: 24rpx;
+  text-align: left;
+}
+.brandPic{
+  height:120rpx;
+  background:pink;
+  width:120rpx;
+  margin-right:24rpx;
 }
