--- a/Weitianshi/pages/contactsActivty/warbandMember/warbandMember.wxss
+++ b/Weitianshi/pages/contactsActivty/warbandMember/warbandMember.wxss
@@ -1,1 +1,80 @@
-/* pages/contactsActivty/warbandMember/warbandMember.wxss */
+.infoLeft {
+  height: 122rpx;
+  width: 122rpx;
+  border-radius: 50%;
+  margin-right: 22rpx;
+}
+
+.userName {
+  font-size: 32rpx;
+  color: #333;
+  line-height: 32rpx;
+  text-align: left;
+  margin-bottom: 24rpx;
+}
+
+.userCompany, .userPosition {
+  font-size: 24rpx;
+  color: #666;
+  line-height: 24rpx;
+  text-align: left;
+  margin-bottom: 16rpx;
+}
+
+.infoBox {
+  height: 122rpx;
+  background: #fff;
+  padding: 32rpx;
+  position: relative;
+  margin-bottom:30rpx;
+}
+
+.refuse {
+  opacity: 0.8;
+  font-size: 20rpx;
+  color: #ccc;
+  letter-spacing: 0;
+  line-height: 48rpx;
+  text-align: center;
+  border: 1rpx solid #999;
+  border-radius: 100rpx;
+  width: 118rpx;
+  height: 48rpx;
+}
+
+.addPersonBtn {
+  background: #40587a;
+  font-size: 20rpx;
+  border-radius: 200rpx;
+  color: #fff;
+  padding: 14rpx 0;
+  line-height: 20rpx;
+  width: 120rpx;
+  text-align: center;
+  margin-bottom: 40rpx;
+}
+
+.addNetwork {
+  position: absolute;
+  right: 32rpx;
+  top: 68rpx;
+}
+.user_image {
+  width: 120rpx;
+  height: 120rpx;
+  display: block;
+  margin-right: 16rpx;
+  border-radius: 50%;
+  font-size: 46rpx;
+  background: #f2f2f2;
+  line-height: 120rpx;
+  color: #40587a;
+  text-align: center;
+}
+
+.others_pic {
+  width: 40rpx;
+  height: 40rpx;
+  display: block;
+  margin-right: 16rpx;
+}
