--- a/Weitianshi/pages/contactsActivty/joinWarband/joinWarband.wxml
+++ b/Weitianshi/pages/contactsActivty/joinWarband/joinWarband.wxml
@@ -1,50 +1,60 @@
 <view id='joinWarband'>
-    <!--搜索框  -->
-    <view class="search_frame">
-        <label class="searchBox flex">
+    <scroll-view scroll-y="true" style="height: 1334rpx;" bindscrolltolower="loadMore">
+        <!--搜索框  -->
+        <view class="search_frame">
+            <label class="searchBox flex">
             <icon type="search" size="12" class="search_icon"></icon>
             <input class="searchInput" placeholder="搜索战队名、创始人" bindinput="searchSth"  /> 
         </label>
-    </view>
-    <!--已加入战队  -->
-    <view class="joinedWarband paddingTop" wx:if="{{joinedWarband.length!=0}}">
-        <view class="text"><span class='blueLine'></span>已加入战队</view>
-        <block wx:for='{{joinedWarband}}' wx:key='{{item.team_id}}'>
-            <view class="warband flex">
-                <view class="logo">
-                    <image src="/img/warband-logo.png"></image>
+        </view>
+        <!--已加入战队  -->
+        <view class="joinedWarband paddingTop" wx:if="{{joinedWarband.length!=0}}">
+            <view class="text"><span class='blueLine'></span>已加入战队</view>
+            <block wx:for='{{joinedWarband}}' wx:key='{{item.team_id}}'>
+                <view class="warband flex">
+                    <view class="logo">
+                        <image src="/img/warband-logo.png"></image>
+                    </view>
+                    <view class="info">
+                        <view class="companyName">{{item.team_name}}</view>
+                        <view class="representative">代表人:{{item.team_founder}}</view>
+                    </view>
+                    <view class="checkbox fr">
+                        <image src="/img/checked.png" data-team='{{item}}' bindtap="checkbox2"></image>
+                    </view>
                 </view>
-                <view class="info">
-                    <view class="companyName">{{item.team_name}}</view>
-                    <view class="representative">代表人:{{item.team_founder}}</view>
+            </block>
+        </view>
+        <!--所有战队  -->
+        <view class="allWarband {{joinedWarband.length!=0 ? '' : 'paddingTop'}}">
+            <view class="text"><span class='blueLine'></span>所有战队</view>
+            <block wx:for='{{warband}}' wx:key='{{item.team_id}}'>
+                <view class="warband flex">
+                    <view class="logo">
+                        <image src="/img/warband-logo.png"></image>
+                    </view>
+                    <view class="info">
+                        <view class="companyName">{{item.team_name}}</view>
+                        <view class="representative">代表人:{{item.team_founder}}</view>
+                    </view>
+                    <view class="checkbox fr" wx:if='{{item.check==true}}'>
+                        <image src="/img/checked.png" data-team='{{item}}' data-index='{{index}}' bindtap="checkbox1"></image>
+                    </view>
+                    <view class="checkbox fr" wx:if='{{item.check==false}}'>
+                        <image src="/img/noChecked.png" data-team='{{item}}' data-index='{{index}}' bindtap="checkbox1"></image>
+                    </view>
                 </view>
-                <view class="checkbox fr">
-                    <image src="/img/checked.png" data-team='{{item}}'  bindtap="checkbox2"></image>
-                </view>
-            </view>
-        </block>
-    </view>
-    <!--所有战队  -->
-    <view class="allWarband {{joinedWarband.length!=0 ? '' : 'paddingTop'}}">
-        <view class="text"><span class='blueLine'></span>所有战队</view>
-        <block wx:for='{{warband}}' wx:key='{{item.team_id}}'>
-            <view class="warband flex">
-                <view class="logo">
-                    <image src="/img/warband-logo.png"></image>
-                </view>
-                <view class="info">
-                    <view class="companyName">{{item.team_name}}</view>
-                    <view class="representative">代表人:{{item.team_founder}}</view>
-                </view>
-                <view class="checkbox fr" wx:if='{{item.check==true}}'>
-                    <image src="/img/checked.png" data-team='{{item}}' data-index='{{index}}' bindtap="checkbox1"></image>
-                </view>
-                <view class="checkbox fr" wx:if='{{item.check==false}}'>
-                    <image src="/img/noChecked.png" data-team='{{item}}' data-index='{{index}}' bindtap="checkbox1"></image>
-                </view>
-            </view>
-        </block>
-    </view>
+            </block>
+        </view>
+        <!--下部空档  -->
+        <view style='height:88rpx;'></view>
+    </scroll-view>
+
     <!--错误提示-->
     <view class="error" wx:if="{{error=='1'}}">{{error_text}}</view>
+    <!--按钮  -->
+    <view class="flex btnGroup">
+        <view class="certain btn" bindtap='certain'>确定</view>
+        <view class="createWarband btn" bindtap='createWarband'>创建战队</view>
+    </view>
 </view>
