--- a/Weitianshi/pages/contactsActivty/joinWarband/joinWarband.wxss
+++ b/Weitianshi/pages/contactsActivty/joinWarband/joinWarband.wxss
@@ -1,5 +1,6 @@
 #joinWarband{
     background:#f3f4f8;
+    position: relative;
 }
 .paddingTop{
     padding-top: 88rpx;
@@ -48,4 +49,21 @@
 .warband .checkbox image{
     width: 48rpx;
     height: 48rpx;
+}
+.btnGroup{
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 88rpx;
+    background: #40587a;
+    color: white;
+    text-align: center;
+    line-height: 88rpx;
+}
+.btn{
+    width: 50%;
+}
+.certain{
+    background: white;
+    color: #40587a;
 }
