--- a/Weitianshi/pages/contactsActivty/joinWarband/joinWarband.wxml
+++ b/Weitianshi/pages/contactsActivty/joinWarband/joinWarband.wxml
@@ -13,7 +13,8 @@
             <block wx:for='{{joinedWarband}}' wx:key='{{item.team_id}}'>
                 <view class="warband flex">
                     <view class="logo">
-                        <image src="/img/warband-logo.png"></image>
+                        <image wx:if="{{item.team_logo_txt}}" src="/img/warband-logo.png"></image>
+                        <image wx:if="{{item.team_logo}}" src="{{item.team_logo}}"></image>
                     </view>
                     <view class="info">
                         <view class="companyName">{{item.team_name}}</view>
@@ -31,7 +32,8 @@
             <block wx:for='{{warband}}' wx:key='{{item.team_id}}'>
                 <view class="warband flex">
                     <view class="logo">
-                        <image src="/img/warband-logo.png"></image>
+                        <image wx:if="{{item.team_logo_txt}}" src="/img/warband-logo.png"></image>
+                        <image wx:if="{{item.team_logo}}" src="{{item.team_logo}}"></image>
                     </view>
                     <view class="info">
                         <view class="companyName">{{item.team_name}}</view>
