--- a/Weitianshi/pages/contactsActivty/activtyDetail/activtyDetail.wxml
+++ b/Weitianshi/pages/contactsActivty/activtyDetail/activtyDetail.wxml
@@ -6,7 +6,7 @@
   <view class="teamTotalRight">6666666666666</view>
 </view>
 <view class="flex bottomBtn">
-  <view class="Connections " bindtap="Connections" >人脉排行</view>
-  <view class="ConnectionsAll " bindtap="Connections" >报名</view>
- <button   open-type="share" id="share" class="ConnectionsAll">分享活动</button>
+  <view class="Connections " bindtap="Connections"  >人脉排行</view>
+   <view class="ConnectionsAll " bindtap="enroll" wx:if="{{status == fasle}}" >报名</view> 
+ <button   open-type="share" id="share" class="ConnectionsAll"   wx:if="{{status == true}}">分享活动</button>
 </view>
