--- a/Weitianshi/pages/contactsActivty/activtyRegister/activtyRegister.wxml
+++ b/Weitianshi/pages/contactsActivty/activtyRegister/activtyRegister.wxml
@@ -1,15 +1,15 @@
 <view id='activtyRegister'>
     <!--表单内容  -->
-    <view class="headPic userBox flex" bindtap="headPic">
+    <view class="headPic userBox flex">
         <view class="personListTile">头像</view>
         <view class="flex">
-            <!-- <view class="personListContent">请上传头像</view> -->
+            <image src="/img/icon-chuantouxiang@2x.png" class="avatar" wx:if="{{user_info.user_avatar_text}}" bindtap="headPic"></image>
             <view class="personListContent">
-                <image class='avatar' src="{{user_info.user_avatar_url}}"></image>
+                <image class='avatar' src="{{user_info.user_avatar_url}}" bindtap="headPic"></image>
             </view>
         </view>
     </view>
-    <view class="telephone userBox flex" >
+    <view class="telephone userBox flex">
         <view class="personListTile">手机号</view>
         <view class="flex">
             <view class="personListContent" style='color:#ccc'>{{user_info.user_mobile || '请填写手机号码'}}</view>
